jaden local version

--- a/Intro.css
+++ b/Intro.css
@@ -1,3 +1,9 @@
 body {
-    background-image: url("background.jpg")
+    background-image: url("background.jpg");
+    color: yellow;
+}
+
+#text {
+    font-style: oblique;
+    font-size: 45px;
 }
