--- a/slide3.css
+++ b/slide3.css
@@ -1,5 +1,16 @@
 body { 
 	background: url(http://www.wired.com/wp-content/uploads/2015/02/MSDEMST_EC002_H.jpg) no-repeat fixed center; 
     background-size: cover;
+}
+a {
+    position:absolute;
+    top:1%;
+    left:0%;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 50;
+    font
     
 }
+
+
+
